@@ -5,6 +5,25 @@ use Test::More;
 use Data::Dumper;
 use File::Basename;
 
+my %tests = (
+        getFusionInventoryTaskList => [
+          {
+            'version' => '2.1.7',
+            'path' => './lib/FusionInventory/Agent/Task/Inventory.pm',
+            'module' => 'Inventory'
+          },
+          {
+            'version' => '2.1.7',
+            'path' => './lib/FusionInventory/Agent/Task/Ping.pm',
+            'module' => 'Ping'
+          },
+          {
+            'version' => '2.1.7',
+            'path' => './lib/FusionInventory/Agent/Task/WakeOnLan.pm',
+            'module' => 'WakeOnLan'
+          }
+        ]
+);
 
 my @taskPm;
 foreach (File::Glob::bsd_glob('lib/FusionInventory/Agent/Task/*.pm')) {
@@ -19,3 +38,6 @@ use_ok('FusionInventory::Agent::Tools');
 foreach (@taskPm) {
     ok (getVersionFromTaskModuleFile($_), 'getVersionFromTaskModuleFile()')
 }
+
+my $r = getFusionInventoryTaskList({ devlib => "1" });
+is_deeply($r, $tests{getFusionInventoryTaskList}, 'getFusionInventoryTaskList()');
