@@ -52,6 +52,7 @@ Revision history for FusionInventory::Agent
          the machinfo output on HP-UX 11.23
        * AIX: collect EMC/Clariion LUN storage (Sébastien Dagnicourt)
        * Win32: fix NETWORKS/VIRTUALDEV on OS prior Vista (David DURIEUX)
+       * Internal: add and use getFusionInventoryLibdir(), getFusionInventoryTaskList()
 
 2.1.7  Sun, 12 Dec 2010 20:05:16 +01000
        * RPC: Better message if access is denied
